--- a/due-processed/sass/site/_site-footer.scss
+++ b/due-processed/sass/site/_site-footer.scss
@@ -4,7 +4,9 @@
 }
 
 .site-info {
-	@include secondary-page-width();
+	width: calc(100% - (2 * 60px));
+	max-width: 1094px;
+	margin: 0 auto;
 	padding: $spacing__large 0;
 	display: flex;
 	flex-direction: row;
@@ -12,6 +14,7 @@
 		color: $color__text-main;
 	}
 	@include breakpoint-below(tablet-portrait) {
+		width: calc(100% - (2 * 20px));
 		flex-direction: column;
 	}
 }
@@ -27,7 +30,7 @@
 	margin: 0;
 	padding: 0;
 	list-style: none;
-	li {
+	.menu-item {
 		margin-bottom: $spacing__x-small;
 	}
 }
