--- a/due-processed/style.css
+++ b/due-processed/style.css
@@ -19,6 +19,7 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
+
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
@@ -88,11 +89,15 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Generic
 --------------------------------------------------------------*/
+
 /* Normalize
 --------------------------------------------- */
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+
 /* Document
 	 ========================================================================== */
+
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
@@ -104,6 +109,7 @@ html {
 
 /* Sections
 	 ========================================================================== */
+
 /**
  * Remove the margin in all browsers.
  */
@@ -129,6 +135,7 @@ h1 {
 
 /* Grouping content
 	 ========================================================================== */
+
 /**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
@@ -150,6 +157,7 @@ pre {
 
 /* Text-level semantics
 	 ========================================================================== */
+
 /**
  * Remove the gray background on active links in IE 10.
  */
@@ -215,6 +223,7 @@ sup {
 
 /* Embedded content
 	 ========================================================================== */
+
 /**
  * Remove the border on images inside links in IE 10.
  */
@@ -224,6 +233,7 @@ img {
 
 /* Forms
 	 ========================================================================== */
+
 /**
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
@@ -369,6 +379,7 @@ textarea {
 
 /* Interactive
 	 ========================================================================== */
+
 /*
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
@@ -385,6 +396,7 @@ summary {
 
 /* Misc
 	 ========================================================================== */
+
 /**
  * Add the correct display in IE 10+.
  */
@@ -401,6 +413,7 @@ template {
 
 /* Box sizing
 --------------------------------------------- */
+
 /* Inherit box-sizing to more easily change it's value on a component level.
 @link http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
 *,
@@ -416,6 +429,7 @@ html {
 /*--------------------------------------------------------------
 # Base
 --------------------------------------------------------------*/
+
 /* Typography
 --------------------------------------------- */
 body,
@@ -536,7 +550,6 @@ html {
 body {
 	background: #fff;
 }
-
 body.overflow-hidden {
 	overflow: hidden;
 }
@@ -610,24 +623,22 @@ a {
 	color: #005b83;
 	text-decoration: none;
 }
-
 a:visited {
 	color: #005b83;
 }
-
 a:hover {
 	text-decoration: underline;
 }
-
-a:hover, a:focus, a:active {
+a:hover,
+a:focus,
+a:active {
 	color: #005b83;
 }
-
 a:focus {
 	outline: none;
 }
-
-a:hover, a:active {
+a:hover,
+a:active {
 	outline: 0;
 }
 
@@ -650,7 +661,6 @@ input[type="submit"] {
 	cursor: pointer;
 	outline: none;
 }
-
 .button:hover,
 button:hover,
 input[type="button"]:hover,
@@ -659,8 +669,8 @@ input[type="submit"]:hover {
 	opacity: 0.85;
 	color: #fff;
 }
-
-.button:active, .button:focus,
+.button:active,
+.button:focus,
 button:active,
 button:focus,
 input[type="button"]:active,
@@ -671,7 +681,6 @@ input[type="submit"]:active,
 input[type="submit"]:focus {
 	opacity: 0.85;
 }
-
 .button:visited,
 button:visited,
 input[type="button"]:visited,
@@ -708,7 +717,6 @@ textarea {
 	padding-right: 10px;
 	height: 40px;
 }
-
 input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="url"]:focus,
@@ -741,6 +749,7 @@ textarea {
 /*--------------------------------------------------------------
 # Site
 --------------------------------------------------------------*/
+
 /*--------------------------------------------------------------
 ## Header
 --------------------------------------------------------------*/
@@ -748,29 +757,26 @@ textarea {
 	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 	padding-top: 20px;
 }
-
 .site-header a {
 	color: #151515;
 	text-decoration: none;
 }
-
-.site-header a:hover, .site-header a:focus, .site-header a:active {
+.site-header a:hover,
+.site-header a:focus,
+.site-header a:active {
 	color: #151515;
 }
-
 @media (max-width: 768px) {
 	.site-header {
 		padding-top: 15px;
 		padding-bottom: 10px;
 	}
 }
-
 @media (min-width: 769px) {
 	.site-header .search-form-wrapper {
 		width: 300px;
 	}
 }
-
 @media (max-width: 768px) {
 	.site-header .search-form-wrapper {
 		margin-top: 10px;
@@ -780,7 +786,6 @@ textarea {
 .site-header-top {
 	display: flex;
 }
-
 @media (min-width: 769px) {
 	.site-header-top {
 		width: calc(100% - (2 * 60px));
@@ -791,13 +796,11 @@ textarea {
 		align-items: center;
 	}
 }
-
 @media (min-width: 769px) and (max-width: 768px) {
 	.site-header-top {
 		width: calc(100% - (2 * 20px));
 	}
 }
-
 @media (max-width: 768px) {
 	.site-header-top {
 		margin: 0 20px;
@@ -809,13 +812,11 @@ textarea {
 	display: flex;
 	align-items: flex-end;
 }
-
 @media (min-width: 769px) {
 	.site-branding {
 		width: 300px;
 	}
 }
-
 @media (max-width: 768px) {
 	.site-branding {
 		width: 195px;
@@ -836,7 +837,6 @@ textarea {
 		display: flex;
 	}
 }
-
 @media (min-width: 769px) and (max-width: 768px) {
 	.site-header-bottom {
 		width: calc(100% - (2 * 20px));
@@ -855,10 +855,10 @@ textarea {
 .site-main {
 	margin: 20px;
 	overflow: hidden;
+
 	/* Resolves issue with <pre> elements forcing full width. */
 	position: relative;
 }
-
 @media (min-width: 769px) {
 	.site-main {
 		width: calc(100% - (2 * 60px));
@@ -869,7 +869,6 @@ textarea {
 		margin-bottom: 50px;
 	}
 }
-
 @media (min-width: 769px) and (max-width: 768px) {
 	.site-main {
 		width: calc(100% - (2 * 20px));
@@ -892,17 +891,12 @@ textarea {
 	display: flex;
 	flex-direction: row;
 }
-
-@media (max-width: 768px) {
-	.site-info {
-		width: calc(100% - (2 * 20px));
-	}
-}
 .site-info a {
 	color: #151515;
 }
 @media (max-width: 768px) {
 	.site-info {
+		width: calc(100% - (2 * 20px));
 		flex-direction: column;
 	}
 }
@@ -921,7 +915,7 @@ textarea {
 	padding: 0;
 	list-style: none;
 }
-.site-info-menu li {
+.site-info-menu .menu-item {
 	margin-bottom: 10px;
 }
 
@@ -978,14 +972,12 @@ textarea {
 	margin: 0;
 	width: 100vw;
 }
-
 .site-main-about .about-container {
 	display: flex;
 	justify-content: center;
 	width: 100vw;
 	margin-top: 20px;
 }
-
 .site-main-about h1,
 .site-main-about h2 {
 	font-size: 2.8rem;
@@ -993,14 +985,12 @@ textarea {
 	line-height: 30px;
 	text-align: center;
 }
-
 @media (max-width: 768px) {
 	.site-main-about p {
 		margin-left: 20px;
 		margin-right: 20px;
 	}
 }
-
 .site-main-about .entry-content {
 	max-width: 636px;
 }
@@ -1008,60 +998,53 @@ textarea {
 /*--------------------------------------------------------------
 # Components
 --------------------------------------------------------------*/
+
 /* Navigation
 --------------------------------------------- */
+
 /* Main Navigation (Header)
 --------------------------------------------- */
 .main-navigation {
 	display: block;
 	width: 100%;
 }
-
 .main-navigation .main-navigation ul {
 	display: flex;
 }
-
 .main-navigation .menu,
 .main-navigation .sub-menu {
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
 }
-
 .main-navigation .menu {
 	display: flex;
 }
-
 .main-navigation .menu-item {
 	font-size: 1.6rem;
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	position: relative;
 	white-space: nowrap;
 }
-
 .main-navigation a {
 	display: block;
 	text-decoration: none;
 }
-
 .main-navigation .menu > .menu-item a {
 	line-height: 60px;
 	margin-right: 50px;
 }
-
 .main-navigation .menu > .menu-item > a {
 	border-bottom: 3px solid transparent;
 }
-
-.main-navigation .menu > .menu-item > a:hover, .main-navigation .menu > .menu-item > a.focus {
+.main-navigation .menu > .menu-item > a:hover,
+.main-navigation .menu > .menu-item > a.focus {
 	border-bottom: 3px solid #005b83;
 }
-
 .main-navigation .menu > .menu-item:hover > .sub-menu,
 .main-navigation .menu > .menu-item.focus > .sub-menu {
 	display: block;
 }
-
 @media (min-width: 769px) {
 	.main-navigation .menu > .menu-item > .sub-menu {
 		background-color: #fff;
@@ -1077,11 +1060,9 @@ textarea {
 		z-index: 99999;
 	}
 }
-
 .main-navigation .menu > .menu-item > .sub-menu .sub-menu {
 	margin-left: 10px;
 }
-
 .main-navigation .menu > .menu-item > .sub-menu .menu-item a {
 	line-height: normal;
 	margin-bottom: 10px;
@@ -1096,18 +1077,15 @@ textarea {
 	background: #fff;
 	color: #151515;
 }
-
 .main-navigation-icon:hover,
 .main-navigation-icon.toggled:hover {
 	opacity: 0.85;
 	color: #151515;
 }
-
 .main-navigation-icon > span,
 .main-navigation-icon.toggled > span {
 	display: inline-block;
 }
-
 .main-navigation-icon > span.main-navigation-close,
 .main-navigation-icon.toggled > span.main-navigation-close {
 	padding: 6px;
@@ -1180,8 +1158,10 @@ textarea {
 
 /* Other Navigation (Comments, Posts, Etc.)
 --------------------------------------------- */
-.site-main .comment-navigation, .site-main
-.posts-navigation, .site-main
+.site-main .comment-navigation,
+.site-main
+.posts-navigation,
+.site-main
 .post-navigation {
 	margin: 0 0 1.5em;
 }
@@ -1232,7 +1212,6 @@ input.search-field {
 	width: 40px;
 	padding: 10px;
 }
-
 @media (max-width: 768px) {
 	.search-submit {
 		background: #fff;
@@ -1326,7 +1305,6 @@ input.search-field {
 	margin: 0 auto;
 	max-width: 872px;
 }
-
 @media (max-width: 768px) {
 	.single-post .post,
 	.single-post .post-navigation {
@@ -1371,7 +1349,6 @@ input.search-field {
 	max-width: 1094px;
 	margin: 0 auto;
 }
-
 @media (max-width: 768px) {
 	.search-results-wrapper {
 		grid-template-columns: 1fr;
@@ -1379,7 +1356,6 @@ input.search-field {
 		max-width: 375px;
 	}
 }
-
 @media (max-width: 768px) {
 	.search-results-wrapper > .post {
 		border-bottom: 1px solid #ccc;
@@ -1392,7 +1368,6 @@ input.search-field {
 		border-bottom: 0;
 	}
 }
-
 .search-results-wrapper > .post > .entry-summary > p {
 	margin: 5px 0;
 }
@@ -1405,6 +1380,7 @@ input.search-field {
 
 /* Footnotes
 --------------------------------------------- */
+
 /* Shared
 --------------------------------------------- */
 .footnote-wrapper {
@@ -1427,11 +1403,9 @@ input.search-field {
 	grid-template-columns: 15px 1fr;
 	cursor: pointer;
 }
-
 .footnote-note a {
 	overflow-wrap: break-word;
 }
-
 .footnote-hidden .footnote-note {
 	visibility: hidden;
 }
@@ -1497,7 +1471,6 @@ input.search-field {
 .widget {
 	margin: 0 0 1.5em;
 }
-
 .widget select {
 	max-width: 100%;
 }
@@ -1524,13 +1497,11 @@ input.search-field {
 	margin-bottom: 1.5em;
 	max-width: 100%;
 }
-
 .wp-caption img[class*="wp-image-"] {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
-
 .wp-caption .wp-caption-text {
 	margin: 0.8075em 0;
 }
@@ -1603,7 +1574,6 @@ input.search-field {
 	justify-content: center;
 	margin-bottom: 20px;
 }
-
 @media (max-width: 768px) {
 	.masthead {
 		flex-direction: column;
@@ -1624,7 +1594,6 @@ input.search-field {
 	border-radius: 50%;
 	margin-bottom: 20px;
 }
-
 @media (max-width: 768px) {
 	.masthead-image {
 		width: 70px;
@@ -1648,7 +1617,6 @@ input.search-field {
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	margin: 0 0 10px;
 }
-
 @media (max-width: 768px) {
 	.masthead-title {
 		margin: 0;
@@ -1665,8 +1633,10 @@ input.search-field {
 /*--------------------------------------------------------------
 # Plugins
 --------------------------------------------------------------*/
+
 /* Jetpack infinite scroll
 --------------------------------------------- */
+
 /* Hide the Posts Navigation and the Footer when Infinite Scroll is in use. */
 .infinite-scroll .posts-navigation,
 .infinite-scroll.neverending .site-footer {
@@ -1681,8 +1651,10 @@ input.search-field {
 /*--------------------------------------------------------------
 # Utilities
 --------------------------------------------------------------*/
+
 /* Accessibility
 --------------------------------------------- */
+
 /* Text meant only for screen readers. */
 .screen-reader-text {
 	border: 0;
@@ -1696,7 +1668,6 @@ input.search-field {
 	width: 1px;
 	word-wrap: normal !important;
 }
-
 .screen-reader-text:focus {
 	background-color: #f5f5f5;
 	border-radius: 3px;
@@ -1725,16 +1696,20 @@ input.search-field {
 /* Alignments
 --------------------------------------------- */
 .alignleft {
+
 	/*rtl:ignore*/
 	float: left;
+
 	/*rtl:ignore*/
 	margin-right: 1.5em;
 	margin-bottom: 1.5em;
 }
 
 .alignright {
+
 	/*rtl:ignore*/
 	float: right;
+
 	/*rtl:ignore*/
 	margin-left: 1.5em;
 	margin-bottom: 1.5em;
@@ -1762,5 +1737,3 @@ input.search-field {
 .wp-block-due-processed-custom-paragraph p {
 	width: 636px;
 }
-
-/*# sourceMappingURL=style.css.map */
