article styling tweaks (#56)
* update footnote styles, add more link

* remove bold treatment from headings

* remove TODOs, simplify nested classes

* fix ordering of article meta data

* add generated files

* remove cta event listener on cleanup

--- a/due-processed/sass/abstracts/variables/_colors.scss
+++ b/due-processed/sass/abstracts/variables/_colors.scss
@@ -14,6 +14,7 @@ $color__background-hr: $__INTERNAL_USE_ONLY_COLOR_MEDIUM_GREY__;
 $color__background-button: $__INTERNAL_USE_ONLY_COLOR_PRIMARY_BLUE__;
 $color__background-pre: $__INTERNAL_USE_ONLY_COLOR_LIGHT_GREY__;
 $color__background-ins: $__INTERNAL_USE_ONLY_COLOR_LIGHT_GREY__;
+$color__background-footnote: $__INTERNAL_USE_ONLY_COLOR_LIGHT_GREY__;
 
 $color__primary_grey: $__INTERNAL_USE_ONLY_COLOR_PRIMARY_GREY__;
 $color__dark_grey: $__INTERNAL_USE_ONLY_COLOR_DARK_GREY__;
