--- a/due-processed/sass/components/content/_single-posts-and-pages.scss
+++ b/due-processed/sass/components/content/_single-posts-and-pages.scss
@@ -20,11 +20,8 @@
 		margin-bottom: $spacing__large;
 	}
 
-	// TODO Change element classname
-	.entry-footer {
-		grid-row: 2;
-		grid-column: 1 / 3;
-		text-align: center;
+	.entry-title {
+		margin: $spacing__small 0;
 	}
 
 	.entry-header {
