--- a/due-processed/sass/components/footnotes/_footnotes.scss
+++ b/due-processed/sass/components/footnotes/_footnotes.scss
@@ -5,8 +5,7 @@
 }
 
 .footnote-anchor {
-	padding-left: 2px;
-	padding-right: 2px;
+	padding: 4px;
 }
 
 .footnote a {
@@ -31,7 +30,6 @@
 	color: $color__border;
 }
 
-
 /* Stacked (Desktop + Tablet) Layout
 --------------------------------------------- */
 .footnote-stacked {
@@ -43,11 +41,27 @@
 		margin-right: 1px; // tolerance needed for box-shadow display
 	}
 
+	.footnote-anchor {
+		&:hover,
+		.footnote-open & {
+			background: $color__background-button;
+			color: $color__text-button;
+		}
+	}
+
 	.footnote-note-content {
 		display: -webkit-box;
 		-webkit-box-orient: vertical;
-		-webkit-line-clamp: 3;
+		-webkit-line-clamp: 2;
 		overflow: hidden;
+	}
+
+	.footnote-cta-more {
+		display: inline;
+	}
+
+	.footnote-cta-less {
+		display: none;
 	}
 
 	&.footnote-open {
@@ -61,6 +75,19 @@
 			display: block;
 			overflow: auto;
 		}
+
+		.footnote-cta-more {
+			display: none;
+		}
+
+		.footnote-cta-less {
+			display: inline;
+		}
+	}
+	.footnote-cta {
+		display: block;
+		grid-row: 2;
+		grid-column: 2;
 	}
 }
 
@@ -69,7 +96,7 @@
 .footnote-inline {
 	.footnote-note {
 		display: none;
-		background: $color__background-secondary;
+		background: $color__background-footnote;
 		padding: $spacing__x-small $spacing__x-large $spacing__x-small
 			$spacing__small;
 		margin: $spacing__x-small 0;
@@ -79,5 +106,8 @@
 		.footnote-note {
 			display: grid;
 		}
+	}
+	.footnote-cta {
+		display: none;
 	}
 }
