--- a/due-processed/sass/components/content/_single-posts-and-pages.scss
+++ b/due-processed/sass/components/content/_single-posts-and-pages.scss
@@ -28,6 +28,20 @@
 		grid-row: 3;
 		grid-column: 1 / 3;
 		text-align: center;
+
+		@include breakpoint-below(tablet-portrait) {
+			text-align: left;
+		}
+	}
+
+	.entry-meta-divider {
+		@include breakpoint-below(tablet-portrait) {
+			display: none;
+		}
+	}
+
+	.byline {
+		display: block;
 	}
 
 	.entry-content {
