--- a/due-processed/style.css
+++ b/due-processed/style.css
@@ -1366,9 +1366,20 @@ input.search-field {
 	margin: 0 0 1.5em;
 }
 
-.cat-links {
+.edit-link {
+	display: block;
+	text-decoration: underline;
+}
+
+.edit-link,
+.categories-links,
+.tags-links {
 	font-size: 1.6rem;
 	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
+}
+
+.tags-links {
+	display: none;
 }
 
 .entry-footer,
@@ -1411,6 +1422,22 @@ input.search-field {
 	grid-row: 3;
 	grid-column: 1 / 3;
 	text-align: center;
+}
+
+@media (max-width: 768px) {
+	.single-post .entry-header {
+		text-align: left;
+	}
+}
+
+@media (max-width: 768px) {
+	.single-post .entry-meta-divider {
+		display: none;
+	}
+}
+
+.single-post .byline {
+	display: block;
 }
 
 .single-post .entry-content {
@@ -1463,10 +1490,49 @@ input.search-field {
 --------------------------------------------- */
 /* Shared
 --------------------------------------------- */
-.footnote-wrapper {
+.footnote-wrapper,
+.footnotes-footer {
+	display: none;
+}
+
+.footnotes-footer {
 	font-size: 1.2rem;
 	font-family: "Lora Regular", georgia, "Times New Roman", times, serif;
 	line-height: 20px;
+	border-top: 1px solid #ccc;
+	margin-top: 20px;
+	padding-top: 20px;
+}
+
+@media (max-width: 768px) {
+	.footnotes-footer {
+		display: block;
+	}
+}
+
+.footnotes-footer.footnote-hidden {
+	display: none;
+}
+
+.footnotes-footer .footnotes-footer-title {
+	margin-bottom: 20px;
+	font-size: 1.6rem;
+	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
+}
+
+.footnotes-footer .footnote-cta {
+	display: none;
+}
+
+.footnote-wrapper {
+	display: none;
+	font-size: 1.2rem;
+	font-family: "Lora Regular", georgia, "Times New Roman", times, serif;
+	line-height: 20px;
+}
+
+.single-post .footnote-wrapper {
+	display: inline;
 }
 
 .footnote-anchor {
