small styling fixes for footnotes (#58)

--- a/due-processed/sass/components/content/_single-posts-and-pages.scss
+++ b/due-processed/sass/components/content/_single-posts-and-pages.scss
@@ -41,7 +41,9 @@
 	}
 
 	.byline {
-		display: block;
+		@include breakpoint-below(tablet-portrait) {
+			display: block;
+		}
 	}
 
 	.entry-content {
