--- a/due-processed/sass/site/_site-footer.scss
+++ b/due-processed/sass/site/_site-footer.scss
@@ -4,17 +4,16 @@
 }
 
 .site-info {
-	width: calc(100% - (2 * 60px));
+	@include primary-page-width();
 	max-width: 1094px;
-	margin: 0 auto;
 	padding: $spacing__large 0;
 	display: flex;
 	flex-direction: row;
 	a {
+		@include font-label();
 		color: $color__text-main;
 	}
 	@include breakpoint-below(tablet-portrait) {
-		width: calc(100% - (2 * 20px));
 		flex-direction: column;
 	}
 }
@@ -60,6 +59,7 @@
 }
 
 .copyright-desktop {
+	padding-top: $spacing__x-small;
 	@include breakpoint-below(tablet-portrait) {
 		display: none;
 	}
