--- a/due-processed/style.css
+++ b/due-processed/style.css
@@ -885,18 +885,25 @@ textarea {
 
 .site-info {
 	width: calc(100% - (2 * 60px));
-	max-width: 1094px;
+	max-width: 1440px;
 	margin: 0 auto;
+	max-width: 1094px;
 	padding: 40px 0;
 	display: flex;
 	flex-direction: row;
 }
+@media (max-width: 768px) {
+	.site-info {
+		width: calc(100% - (2 * 20px));
+	}
+}
 .site-info a {
+	font-size: 1.6rem;
+	font-family: "Work Sans Light", "Helvetica Neue", helvetica, arial, sans-serif;
 	color: #151515;
 }
 @media (max-width: 768px) {
 	.site-info {
-		width: calc(100% - (2 * 20px));
 		flex-direction: column;
 	}
 }
@@ -948,6 +955,9 @@ textarea {
 	font-weight: 400;
 }
 
+.copyright-desktop {
+	padding-top: 10px;
+}
 @media (max-width: 768px) {
 	.copyright-desktop {
 		display: none;
